[package]
name = "hugo_to_json"
version = "0.3.1"
description = "A library and command line tool for producing a JSON representation of a Hugo site."
keywords = ["Lunr", "Hugo", "JSON"] 
authors = ["Arran France <arran@arranfrance.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/arranf/HugoToJSON"
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.6.0"
log = "0.4.6"
strip_markdown = "0.1"
toml = "0.4.10"
yaml-rust = "0.4"
walkdir = "2"
serde_json = "1.0"
serde = "1.0.89"
serde_derive = "1.0"
structopt = "0.2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1"
tempfile = "3"
