[package]
name = "hugo_to_json"
version = "0.3.4"
description = "A library and command line tool for producing a JSON representation of a Hugo site."
keywords = ["Lunr", "Hugo", "JSON"]
authors = ["Arran France <arran@arranfrance.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/arranf/HugoToJSON"
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
strip_markdown = "0.1"
toml = "0.5.5"
yaml-rust = "0.4"
walkdir = "2"
serde_json = "1.0"
serde = "1.0.102"
serde_derive = "1.0"
structopt = "0.3.5"
num_cpus = "1.11.1"
threadpool = "1.7.1"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1"
tempfile = "3"
