[package]
name = "hugo_to_json"
version = "0.3.7"
description = "A library and command line tool for producing a JSON representation of a Hugo site."
keywords = ["Lunr", "Hugo", "JSON"]
authors = ["Arran France <arran@arranfrance.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/arranf/HugoToJSON"
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
strip_markdown = "0.2.0"
toml = "0.5.6"
yaml-rust = "0.4.5"
walkdir = "2.3.2"
serde_json = "1.0.64"
serde = "1.0.124"
serde_derive = "1.0.124"
structopt = "0.3"
num_cpus = "1.13.0"
threadpool = "1.8.1"
thiserror = "1.0.24"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
tempfile = "3.2.0"
